jre does not have javac and jpackage, use jdk to compile but copy jre #92